--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -204,66 +204,128 @@
               <svg
                 class="footer-feature__icon icon-web3"
                 viewBox="0 0 48 48"
+                id="a"
                 xmlns="http://www.w3.org/2000/svg"
               >
-                <circle class="a" cx="24" cy="24" r="21.5" />
-                <line class="a" x1="24" y1="2.5" x2="24" y2="45.5" />
-                <path
-                  class="a"
-                  d="M38.19,7.8505C34.1272,17.65,22.4061,37.69,13.312,42.657"
-                />
-                <path
-                  class="a"
-                  d="M43.3017,33.4787C36.2124,23.58,24.7425,11.7618,5.944,12.3276"
-                />
-                <path
-                  class="a"
-                  d="M45.2683,20.8433C34.46,30.9419,19.3921,35.1789,4.8653,33.81"
-                />
-                <path
-                  class="a"
-                  d="M32.2794,4.1527C39.9266,17.194,42.1894,36.5335,24,45.5"
-                />
-                <path
-                  class="a"
-                  d="M42.0445,12.308C32.8069,12.5692,29.9352,13.74,24,16.0859"
-                />
-                <path
-                  class="a"
-                  d="M24,40.7663c5.6473,0,13.5053-1.38,19.3017-7.2876C43.706,20.8433,39.8072,11.8979,24,4.1527"
-                />
-                <path
-                  class="a"
-                  d="M24,8.5112c4.9387.3176,6.8691,1.2462,12.128,4.1713"
-                />
-                <path
-                  class="a"
-                  d="M9.8105,7.8505C13.8728,17.65,25.5939,37.69,34.688,42.657"
-                />
-                <path
-                  class="a"
-                  d="M4.6983,33.4787C11.7876,23.58,23.2575,11.7618,42.056,12.3276"
-                />
-                <path
-                  class="a"
-                  d="M2.7317,20.8433C13.54,30.9419,28.6079,35.1789,43.1347,33.81"
-                />
-                <path
-                  class="a"
-                  d="M15.7206,4.1527C8.0734,17.194,5.8106,36.5335,24,45.5"
-                />
-                <path
-                  class="a"
-                  d="M5.9555,12.308C15.1931,12.5692,18.0648,13.74,24,16.0859"
-                />
-                <path
-                  class="a"
-                  d="M24,40.7663c-5.6473,0-13.5053-1.38-19.3017-7.2876C4.294,20.8433,8.1928,11.8979,24,4.1527"
-                />
-                <path
-                  class="a"
-                  d="M24,8.5112c-4.9387.3176-6.8691,1.2462-12.128,4.1713"
-                />
+                <g id="b">
+                  <g id="c">
+                    <path
+                      id="d"
+                      class="x"
+                      d="m43.9115,32.1107c-2.5693,6.3076-13.5668,10.2263-24.5636,8.7526-7.575-1.0151-13.4896-4.4077-15.2594-8.7526"
+                    />
+
+                    <path
+                      id="e"
+                      class="x"
+                      d="m45.5,24c0,6.8108-9.6259,12.3321-21.5,12.3321S2.5,30.8108,2.5,24h0"
+                    />
+
+                    <path
+                      id="f"
+                      class="x"
+                      d="m43.9115,15.8893c2.5693,6.3076-4.2626,12.6156-15.2594,14.0893-10.9968,1.4737-21.9943-2.445-24.5636-8.7526-.715-1.7553-.715-3.5815,0-5.3368"
+                    />
+
+                    <path
+                      id="g"
+                      class="x"
+                      d="m38.9748,8.5725c4.8871,4.7438,2.1443,10.8618-6.126,13.665-8.2704,2.8032-18.9366,1.23-23.8236-3.5138-3.2254-3.1308-3.2254-7.0203,0-10.1511"
+                    />
+
+                    <path
+                      id="h"
+                      class="x"
+                      d="m27.3716,2.7658c6.7265,1.0681,10.6698,5.0617,8.8077,8.9199s-8.8245,6.1201-15.5509,5.052c-6.7265-1.0681-10.6698-5.0617-8.8077-8.9199,1.1847-2.4546,4.5283-4.3725,8.8077-5.052"
+                    />
+
+                    <path
+                      id="i"
+                      class="x"
+                      d="m45.5,24c0,11.8741-9.6259,21.5-21.5,21.5S2.5,35.8741,2.5,24,12.1259,2.5,24,2.5s21.5,9.6259,21.5,21.5Z"
+                    />
+
+                    <path
+                      id="j"
+                      class="x"
+                      d="m30.5389,7.2502c0,2.1047-2.9746,3.811-6.6439,3.811s-6.6439-1.7062-6.6439-3.811,2.9746-3.811,6.6439-3.811,6.6439,1.7062,6.6439,3.811Z"
+                    />
+
+                    <g id="k">
+                      <path
+                        id="l"
+                        class="x"
+                        d="m24.3595,3.4392c.1382-.6042.2721-.927.3972-.9219h0"
+                      />
+
+                      <path
+                        id="m"
+                        class="x"
+                        d="m23.0334,45.4828c-.6781-.0272-.842-9.6674-.3661-21.532.194-4.8375.4645-9.2979.7627-12.8827"
+                      />
+
+                      <path
+                        id="n"
+                        class="x"
+                        d="m27.6062,4.0876c1.4412-.5414,2.8176-.6146,4.0465-.1392h0"
+                      />
+
+                      <path
+                        id="o"
+                        class="x"
+                        d="m16.1374,44.0517c-5.0728-1.9626-5.7119-12.531-1.4275-23.6052,1.5009-3.8794,3.4068-7.3062,5.468-10.0372"
+                      />
+
+                      <path
+                        id="p"
+                        class="x"
+                        d="m29.8626,5.5791c4.169.0652,7.9039,1.5444,10.4114,4.4933h0"
+                      />
+
+                      <path
+                        id="q"
+                        class="x"
+                        d="m7.5161,37.9277c-5.6633-6.6601-2.9212-18.2948,6.1246-25.9868,1.3819-1.175,2.7955-2.1697,4.2791-3.0225"
+                      />
+
+                      <path
+                        id="r"
+                        class="x"
+                        d="m30.5391,7.517c9.3842,2.8782,15.7161,10.734,14.698,19.0849"
+                      />
+
+                      <path
+                        id="s"
+                        class="x"
+                        d="m2.5531,21.3981c.8704-7.1395,6.8687-12.637,14.715-14.4188"
+                      />
+
+                      <path
+                        id="t"
+                        class="x"
+                        d="m29.4068,9.3786c1.9831,1.4038,3.8859,3.1337,5.6114,5.1628,7.6922,9.0457,8.9479,20.6136,2.8048,25.8374"
+                      />
+
+                      <path
+                        id="u"
+                        class="x"
+                        d="m9.9672,7.6213c2.2622-1.9237,5.2123-2.7188,8.4209-2.504"
+                      />
+
+                      <path
+                        id="v"
+                        class="x"
+                        d="m26.8086,10.675c1.7314,3.0842,3.319,6.9458,4.5217,11.245,3.199,11.4351,2.4634,21.6363-1.643,22.7851"
+                      />
+
+                      <path
+                        id="w"
+                        class="x"
+                        d="m18.1028,3.295c.8918-.2495,1.8693-.0515,2.886.5286"
+                      />
+                    </g>
+                  </g>
+                </g>
               </svg>
             </div>
             <div class="footer-feature__text">Web3 application</div>
