added user verification in frontend

--- a/src/main/resources/templates/createSubscription.html
+++ b/src/main/resources/templates/createSubscription.html
@@ -70,7 +70,7 @@
         <div class="wrap-login100-vertical">
             <form
                     method="POST"
-                    id="loginForm"
+                    id="subscribeForm"
                     th:action="@{/subscribe}"
                     class="login100-form-vertical validate-form"
             >
