minor configuration fixes

--- a/src/main/resources/templates/Transactions.html
+++ b/src/main/resources/templates/Transactions.html
@@ -286,7 +286,7 @@
             <form
               class="sort-table-selecter"
               method="POST"
-              id="loginForm"
+              id="transactionFilter"
               th:action="@{/Transactions}"
             >
               <div class="filters-group filters-fields">
